# GegevensNAlgoritmen

./: .gitignore  README.md
Labo/Labo2/src/: insertionsort.h  main.cpp  mergesort.h  shellsort.h  sorteermethode.h  sortvector.h  stlsort.h
Labo/Labo3/: CMakeLists.txt
Labo/Labo3/include/: Sudoku.h
Labo/Labo3/src/: 1_invalid.txt  main.cpp
Labo/Labo4/: CMakeLists.txt  Documentation.md  Readme.md  makefile
Labo/Labo4/src/: hashfunctions.h  main  main.cpp
Labo1/: build.bat
Labo1/src/: lijst.h  lijsttest.cpp
Sorting/: CMakeLists.txt
Sorting/include/: chrono.h  csv.h  intstring.h  sorteermethode.h  sortvector.h
Sorting/lib/: chrono.cpp  csv.cpp
Sorting/src/: main.cpp
Sorting/src/binary_search/: binarysearch.cpp  binarysearch.h
Sorting/src/heap_sort/: heap.h  heapsort.cpp  heapsort.h
Sorting/src/insertion_sort/: insertionsort.cpp  insertionsort.h
Sorting/src/merge_sort/: mergesort.cpp  mergesort.h
Sorting/src/quick_sort/: quicksort.cpp  quicksort.h
Sorting/src/shell_sort/: shellsort.cpp  shellsort.h
Theorie/: examen.tex
Theorie/heap_sort/: heap_sort.hpp
Theorie/insertion_sort/: insertion_sort.cpp
Theorie/selection_sort/: selection_sort.cpp
Theorie/shell_sort/: shell_sort.hpp
Theorie/tests/: main  main.cpp
